--- a/configs/user.yaml
+++ b/configs/user.yaml
@@ -1,4 +1,4 @@
 genCode:
   templates_path: "assert/templates/go/tem_go_project"
   dict_path: "assert/templates/go/dict"
-  result_path: "assert/result/sso_center"
+  result_path: "result/test_project"
