--- a/configs/user.yaml
+++ b/configs/user.yaml
@@ -1,4 +1,5 @@
 genCode:
   templates_path: "assert/templates/go/tem_go_project"
+  code_model_path: "assert/templates/go/dict/code"
   dict_path: "assert/templates/go/dict"
   result_path: "result/test_project"
