--- a/assert/templates/go/tem_go_project/deploy/dockerfile
+++ b/assert/templates/go/tem_go_project/deploy/dockerfile
@@ -1,7 +1,7 @@
 # 表示依赖 alpine 最新版
 FROM alpine:latest
 ENV VERSION 1.0
-LABEL title="api.openfileplatform.com"
+LABEL title="tem_go_project"
 
 # 在容器根目录 创建一个 apps 目录
 WORKDIR /apps
@@ -25,7 +25,7 @@ ENV LANG C.UTF-8
 RUN chmod 777 /apps/golang_app
 
 # 暴露端口
-EXPOSE 9001
+EXPOSE 8000
 
 # 运行golang程序的命令
 # ENTRYPOINT ["/apps/golang_app"]
