更新文件生成的配置方式，由写入代码中改为配置文件形式

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -10,3 +10,4 @@ genCode:
   templates_path: "assert/templates/go/tem_go_project"
   dict_path: "assert/templates/go/dict"
   result_path: "result/project-center-service"
+  tmplPath: "assert/templates/go/tmpl"
