--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,13 +1,13 @@
 database:
   driver : "mysql"
-  host : "139.9.128.8"
+  host : "47.107.75.113"
   port : "3306"
-  username : "root"
-  password : "idealwifi@2021"
-  database : "innovate-platform"
+  username : "LryGenCode"
+  password : "lryGenCode"
+  database : "lry_gen_code"
 
 genCode:
   templates_path: "assert/templates/go/tem_go_project"
   dict_path: "assert/templates/go/dict"
-  result_path: "result/project-center-service"
+  result_path: "result/lry_code_gen"
   tmplPath: "assert/templates/go/tmpl"
