添加命令——生成代码选项。 重构核心代码——修改生成url为使用多表生成文件

--- a/assert/templates/go/dict/makefile.json
+++ b/assert/templates/go/dict/makefile.json
@@ -23,5 +23,10 @@
     "tmplPath": "router.go.tpl",
     "outPath": "internal/routers/api1_0",
     "divideDir": true
+  },
+  {
+    "tmplPath": "urls.go.tpl",
+    "outPath": "internal/routers/api1_0/urls.go",
+    "isTables": true
   }
 ]
