--- a/assert/templates/go/dict/makefile.json
+++ b/assert/templates/go/dict/makefile.json
@@ -1,32 +1,29 @@
 [
   {
     "tmplPath": "model.go.tpl",
-    "outPath": "internal/models/mysqlModel",
-    "divideDir": true
+    "outPath": "internal/models/mysqlModel"
   },
   {
     "tmplPath": "dao.go.tpl",
-    "outPath": "internal/dao",
-    "divideDir": true
+    "outPath": "internal/dao"
   },
   {
     "tmplPath": "service.go.tpl",
-    "outPath": "internal/services",
-    "divideDir": true
+    "outPath": "internal/services"
   },
   {
     "tmplPath": "api.go.tpl",
-    "outPath": "internal/apis/api1_0",
+    "outPath": "internal/apis/api_1_0",
     "divideDir": true
   },
   {
     "tmplPath": "router.go.tpl",
-    "outPath": "internal/routers/api1_0",
+    "outPath": "internal/routers/api_1_0",
     "divideDir": true
   },
   {
     "tmplPath": "urls.go.tpl",
-    "outPath": "internal/routers/api1_0/urls.go",
+    "outPath": "internal/routers/api_1_0/urls.go",
     "isTables": true
   }
 ]
