--- a/assert/templates/go/tem_go_project/configs/database.yaml
+++ b/assert/templates/go/tem_go_project/configs/database.yaml
@@ -1,9 +1,9 @@
 mysql:
-  host: 39.99.146.111
-  port: 3306
-  username: dev_go
-  password: dev_go2021
-  dbname: OpenFilePlatform
+  host:
+  port:
+  username:
+  password:
+  dbname:
 
 redis:
   addr:
