--- a/assert/templates/go/dict/makefile.json
+++ b/assert/templates/go/dict/makefile.json
@@ -1,8 +1,29 @@
 [
   {
-    "tmplPath": "model.py.tpl",
-    "outPath": "models",
-    "divideDir": false,
-    "isTables": false
+    "tmplPath": "model.go.tpl",
+    "outPath": "internal/models/mysqlModel"
+  },
+  {
+    "tmplPath": "dao.go.tpl",
+    "outPath": "internal/dao"
+  },
+  {
+    "tmplPath": "service.go.tpl",
+    "outPath": "internal/services"
+  },
+  {
+    "tmplPath": "api.go.tpl",
+    "outPath": "internal/apis/api_1_0",
+    "divideDir": true
+  },
+  {
+    "tmplPath": "router.go.tpl",
+    "outPath": "internal/routers/api_1_0",
+    "divideDir": true
+  },
+  {
+    "tmplPath": "urls.go.tpl",
+    "outPath": "internal/routers/api_1_0/urls.go",
+    "isTables": true
   }
 ]
