--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -34,6 +34,6 @@ system:
   UseRedis: true
 remote:
   #  ES路由
-  ESUrl: http://47.107.75.113:9200
+  ESUrl: http://www.myES.com
 user:
   defaultPassword: 123456
