--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -49,3 +49,8 @@ template:
   StoreType: 2
   # 存储路径前缀
   StorePath: /template/%s/%s # 1为模板类型（项目模板，数据库模板）2为文件名
+smtp:
+  Host: "smtp.qq.com"
+  Port: ":587"
+  User: "3142499264@qq.com"
+  Pass: "jagtcuknpwqvdgba"
