--- a/configs/gen_config.yaml
+++ b/configs/gen_config.yaml
@@ -1,10 +1,10 @@
 database:
   driver : "mysql"
-  host : "47.107.75.113"
-  port : "3306"
-  username : "LryGenCode"
-  password : "lryGenCode"
-  database : "lry_gen_code"
+  host : "xxx"
+  port : "xxx"
+  username : "xxx"
+  password : "xxx"
+  database : "xxx"
 
 genCode:
   templates_path: "assert/templates/go/tem_go_project"
