--- a/deploy/configs/config.yaml
+++ b/deploy/configs/config.yaml
@@ -9,13 +9,13 @@ system:
   #  环境
   Mode: release
   #  秘钥
-  Secret: d3a5c5c29c1130bddf55b8cda7ac770b9c085f0fe0b1c1ce3c566b90c78769d4
+  Secret: xxx
   #  rsa私钥
   RSAPrivate: configs/rsa/private.pem
   #  rsa公钥
   RSAPublic: configs/rsa/public.pem
   #  过期时间（秒）
-  TokenExpireTime: 3600
+  TokenExpireTime: 86400
   RedisExpireTime: 3600
   SessionExpireTime: 86400
   #  服务中心ID
@@ -24,16 +24,33 @@ system:
   DataCenterID: 00001
   #  fs本地文件系统路径
   FsPath: fs
-#  部署服务器ip
+  #  部署服务器ip
   SysIP: 0.0.0.0
-#  部署服务器端口
+  #  部署服务器端口
   SysPort: 8000
-#  使用mysql
+  #  使用mysql
   UseMysql: true
   #  使用redis
   UseRedis: true
 remote:
   #  ES路由
   ESUrl: http://www.myES.com
+  #  minio秘钥
+  minio:
+    Endpoint: xx.xx.xx.xx:xx
+    AccessKey: xxx
+    SecretKey: xxx
+    UseSSL: false
+    BucketName: xxx
 user:
   defaultPassword: 123456
+template:
+  # 1-web服务器本地存储 2-oss对象存储 3-dfs分布式文件存储
+  StoreType: 2
+  # 存储路径前缀
+  StorePath: /template/%s/%s # 1为模板类型（项目模板，数据库模板）2为文件名
+smtp:
+  Host: "smtp.qq.com"
+  Port: ":587"
+  User: "xxx"
+  Pass: "xxx"
