--- a/deploy/configs/database.yaml
+++ b/deploy/configs/database.yaml
@@ -1,11 +1,11 @@
 mysql:
-  host: 39.99.146.111
-  port: 3306
-  username: dev_go
-  password: dev_go2021
-  dbname: OpenFilePlatform
+  host: xx.xx.xx.xx
+  port: xxx
+  username: xxx
+  password: xxx
+  dbname: xxx
 
 redis:
-  addr:
-  password:
+  addr: xx:xx
+  password: xxx
   DB: 0
