--- a/assert/templates/go/tem_go_project/configs/database.yaml
+++ b/assert/templates/go/tem_go_project/configs/database.yaml
@@ -1,11 +1,12 @@
 mysql:
-  host:
-  port:
-  username:
-  password:
-  dbname:
+  driver : "mysql"
+  host : "mysql_host"
+  port : "mysql_port"
+  username : "mysql_username"
+  password : "mysql_password"
+  database : "mysql_database"
 
 redis:
-  addr:
-  password:
-  DB: 0
+  addr: "redis_host"
+  password: "redis_password"
+  DB: 1
