--- a/assert/templates/go/tem_go_project/deploy/configs/config.yaml
+++ b/assert/templates/go/tem_go_project/deploy/configs/config.yaml
@@ -9,13 +9,13 @@ system:
   #  环境
   Mode: release
   #  秘钥
-  Secret: d3a5c5c29c1130bddf55b8cda7ac770b9c085f0fe0b1c1ce3c566b90c78769d4
+  Secret: XXX
   #  rsa私钥
   RSAPrivate: configs/rsa/private.pem
   #  rsa公钥
   RSAPublic: configs/rsa/public.pem
   #  过期时间（秒）
-  TokenExpireTime: 3600
+  TokenExpireTime: 86400
   RedisExpireTime: 3600
   SessionExpireTime: 86400
   #  服务中心ID
@@ -24,16 +24,25 @@ system:
   DataCenterID: 00001
   #  fs本地文件系统路径
   FsPath: fs
-#  部署服务器ip
+  #  部署服务器ip
   SysIP: 0.0.0.0
-#  部署服务器端口
+  #  部署服务器端口
   SysPort: 8000
-#  使用mysql
+  #  rpc服务端口
+  RpcPort: 8002
+  #  使用mysql
   UseMysql: true
   #  使用redis
   UseRedis: true
 remote:
   #  ES路由
-  ESUrl: http://www.myES.com
+  ESUrl: http://localhost:9200
+  #  单点登录中心路由
+  SsoCenter: sso-center:8002
+smtp:
+  Host: "smtp.qq.com"
+  Port: ":587"
+  User: "*"
+  Pass: "*"
 user:
   defaultPassword: 123456
