--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -5,13 +5,13 @@ services:
     stdin_open: true
     tty: true
     build: .
-    image: LRYGoCodeGen
+    image: lry_go_code_gen
 #    container_name: LRYGoCodeGen
     restart: always
     volumes:
-      - /docker/deploy/LRYGoCodeGen/configs:/apps/configs
-      - /docker/deploy/LRYGoCodeGen/logs:/apps/logs
+      - /docker/LRYGoCodeGen/configs:/apps/configs
+      - /docker/LRYGoCodeGen/logs:/apps/logs
     ports:
-      - "8000:8000"
-    command:
-      - /apps/golang_app
+      - "9000:8000"
+#    command:
+#      - /apps/golang_app
