--- a/assets/project_layout/deploy/svc.yaml
+++ b/assets/project_layout/deploy/svc.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: tem_go_project  # 服务名
+  name: project_layout  # 服务名
 spec:
   type: NodePort
   ports:
@@ -15,4 +15,4 @@ spec:
       port: 9001  # k8s内部通讯端口
       targetPort: 8002
   selector: #对应的Pod拥有的标签
-    app: tem_go_project
+    app: project_layout
