--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,7 +1,7 @@
 database:
   driver : "mysql"
-  host : "139.9.128.8"
+  host : "127.0.0.1"
   port : "3306"
   username : "root"
-  password : "idealwifi@dmin"
-  database : "innovate-show-center"
+  password : "XXX"
+  database : "XXX"
